[gd_scene load_steps=7 format=2]

[ext_resource path="res://Src/Entities/FpPlayer/FpCamera/FpCamera.tscn" type="PackedScene" id=1]
[ext_resource path="res://Src/Entities/FpPlayer/FpHud/FpHud.tscn" type="PackedScene" id=2]
[ext_resource path="res://Src/Entities/FpPlayer/FpMovement.gd" type="Script" id=3]
[ext_resource path="res://Src/Entities/FpPlayer/FpInput.gd" type="Script" id=4]
[ext_resource path="res://Src/Entities/FpPlayer/FpPlayer.gd" type="Script" id=5]

[sub_resource type="CapsuleShape" id=1]
radius = 0.3
height = 1.2

[node name="FpPlayer" type="KinematicBody"]
script = ExtResource( 5 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.9, 0 )
shape = SubResource( 1 )

[node name="FpInput" type="Node" parent="."]
script = ExtResource( 4 )

[node name="FpMovement" type="Node" parent="."]
script = ExtResource( 3 )

[node name="FpCamera" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0 )

[node name="FpHud" parent="." instance=ExtResource( 2 )]
